--- a/Assets/css/style.css
+++ b/Assets/css/style.css
@@ -35,6 +35,30 @@ body {
       top: 0;
       bottom: 0;
     }
+
+    .container-form {
+      max-width: 100%;
+    }
+    
+    input[type=text], select, textarea {
+      width: 100%; /* Full width */
+      padding: 12px; /* Some padding */  
+      border: 1px solid #ccc; /* Gray border */
+      border-radius: 4px; /* Rounded borders */
+      box-sizing: border-box; /* Make sure that padding and width stays in place */
+      margin-top: 6px; /* Add a top margin */
+      margin-bottom: 16px; /* Bottom margin */
+      resize: vertical /* Allow the user to vertically resize the textarea (not horizontally) */
+    }
+  
+  input[type=submit] {
+      background-color: #4aaaa5;
+      color: white;
+      padding: 12px 20px;
+      border: none;
+      border-radius: 4px;
+      cursor: pointer;
+    }
     
     footer {
       border-style: solid;
